<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/backgroud_white_radius_6">
    <androidx.core.widget.NestedScrollView
        android:paddingTop="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_16"
            android:paddingRight="@dimen/dp_16"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/dp_18"
                android:gravity="center"
                android:textStyle="bold"
                android:text="个人信息保护指引"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dp_14"
                android:text="使用基础框架 APP之前，请充分阅读并理解"
                android:layout_marginTop="@dimen/dp_10"
                android:textColor="@color/text_color_middle"/>
            <TextView
                android:id="@+id/tvAgreementTip"
                android:layout_width="match_parent"
                android:textSize="@dimen/dp_14"
                android:textColor="@color/text_color_middle"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/webviewAgreementContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tv_agreement_dialog_content"
                android:textColor="@color/color_999999"
                android:textSize="@dimen/dp_14"
                android:layout_marginTop="@dimen/dp_6"
                android:lineSpacingExtra="@dimen/dp_2"
                />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
    <Button
        android:id="@+id/btnAgreementContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_know"
        android:textSize="@dimen/dp_16"
        android:textColor="@color/white"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:background="@drawable/backgroud_e74723_radius_4"
        android:layout_margin="@dimen/dp_15"
        />

    <TextView
        android:id="@+id/btnAgreementRefuse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_dont"
        android:textSize="@dimen/dp_12"
        android:textColor="@color/text_color_dark"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_15"
        />
</LinearLayout>
